--- a/forum/templates/forum/updatesubs.html
+++ b/forum/templates/forum/updatesubs.html
@@ -11,6 +11,7 @@
 <p>{% trans "No subscriptions." %}</p>
 {% else %}
 <form method='post' action='./'>
+{% csrf_token %}
 <table id='djangoForumThreadList'>
 
 <tr>
