--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -8,6 +8,7 @@
     <h1>{% trans "Change Password" %}</h1>
     
     <form method="POST" action="" class="uniForm">
+        {% csrf_token %}
         <fieldset class="inlineLabels">
             {{ password_change_form|as_uni_form }}
              <div class = "form_block">
