--- a/templates/account/password_delete.html
+++ b/templates/account/password_delete.html
@@ -8,6 +8,7 @@
     <h1>{% trans "Delete Password" %}</h1>
     <p>{% blocktrans %}You may delete your password since you are currently logged in using OpenID.{% endblocktrans %}</p>
     <form method="post" action="">
+        {% csrf_token %}
         <input type="submit" value="{% trans "delete my password" %}">
     </form>
 {% endblock %}
