--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -9,6 +9,7 @@
     <h1>{% trans "Set Password" %}</h1>
     
     <form method="POST" action="" class="uniForm">
+        {% csrf_token %}
         <fieldset class="inlineLabels">
             {{ password_set_form|as_uni_form }}
              <div class = "form_block">
