--- a/templates/default/profiles/profile_form.html
+++ b/templates/default/profiles/profile_form.html
@@ -1,6 +1,7 @@
 {% load uni_form %}
 
 <form class="uniForm" method="POST" action="{% url profile_edit %}">
+    {% csrf_token %}
     <fieldset>
         {{ profile_form|as_uni_form }}
         <div class="form_block">
