--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -37,6 +37,7 @@
 {% else %}
 {% if user.is_authenticated %}
 <form method='post' action='reply/'>
+{% csrf_token %}
 <p><label>{% trans "Posting As" %}</label><span>{{ user.username }}</span></p>
 {{ form.as_p }}
 <input type='submit' value='{% trans "Submit" %}' />
