--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -11,6 +11,7 @@
     
     {% if form %}
         <form method="POST" action="" class="uniForm">
+            {% csrf_token %}
             <fieldset class="inlineLabels">
                 {{ form|as_uni_form }}
                  <div class = "form_block">
